# azure-sql-export

./: .gitignore  DISTRIBUTION_PACKAGE.md  Dockerfile.azs  FILE_MANAGER_README.md  INSTALLATION.md  README.md  azs  azs-docker  azs.cmd  azure_sql_compare.py  azure_sql_copy.py  azure_sql_export.py  azure_sql_import.py  azure_sql_web.py  config.azure-ad.example.json  config.azure-ad.example.yaml  config.compare.example.yaml  config.copy.example.yaml  config.example.json  config.example.yaml  config.import.example.yaml  file_manager.py  file_manager_requirements.txt  git_ops.py  now.sql  pyproject.toml  requirements.txt  requirements_file_manager.txt  run_file_manager.bat  run_file_manager.py  run_file_manager.sh  run_git_ops.py  start_web.py  test.sql
pyazs/: __init__.py  cli.py  common.py  compare.py  copy.py  migrate.py  sync.py  test.py  web.py
scripts/: apply_latest_migration.py  db_change.py  mig.py  sync.py
sql/BPG_FinOps_Invoice_Reimbursement/Stored Procedures/: sp_AutoApprove.sql  sp_BulkCostUpdate.sql  sp_BulkCostUpdateByInvoice.sql  sp_BulkCostUpdateByInvoiceJSON.sql  sp_BulkCostUpdateByProject.sql  sp_BulkCostUpdateJSON.sql  sp_GenerateQuarters.sql  sp_GetCost.sql  (+25 more)
sql/migrations/: update0001.sql  update0002.sql
static/: config.azure-ad.example.yaml  config.compare.example.yaml  config.copy.example.yaml
templates/: base.html  compare.html  copy.html  export.html  format.html  import.html  index.html
tests/: test_sql_formatter.py  test_sql_formatter_joins.py  test_sql_formatter_nested.py  test_sql_formatter_now.py
tests/samples/: now.sql  shouldbe.sql
(+21 files in other folders)
